svqb: add svqb_xd for full dd/qd svqb test

--- a/svqb/Makefile
+++ b/svqb/Makefile
@@ -1,7 +1,7 @@
 NVCCFLAGS   := -std=c++11 -O3 -arch=sm_35 --compiler-options="-O2 -pipe -Wall -fopenmp -g" -Xcompiler -rdynamic --generate-line-info -Xcudafe "--diag_suppress=code_is_unreachable" #  -Xptxas="-v"
 
-CCFLAGS     := 
-LDFLAGS     := -L/opt/cuda/lib64 -L../../magma/lib/ -L../../mpack/lib/ -lcublas -lmagma -lmblas_dd  -lqd
+CCFLAGS     :=
+LDFLAGS     := -L/opt/cuda/lib64 -L../../magma/lib/ -L../../mpack/lib/ -lcublas -lmagma -lmblas_dd -lmblas_qd  -lmlapack_dd -lmlapack_qd  -lqd
 INCLUDES 	:= -I../../magma/include/ -I../../mpack/include/ -I../../mpack/include/mpack
 
 svqb: svqb.cu ../PseudoQuad.cuh
